Bug 1167468: Assert that JSObjects and their metadata are always in the same compartment. r=fitzgen